<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="#006400"
    tools:context=".CropDetilActivity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:text="@string/demo_type"
        android:textColor="@color/black"
        android:textSize="50sp"
        android:layout_gravity="center"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:textAlignment="center"
        android:layout_marginTop="60dp"
        android:background="@drawable/crop_header_corner"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="20dp">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/type"
            android:textColor="@color/white"
            android:textSize="26sp"
            android:layout_marginLeft="30dp"
            android:padding="10dp"
            android:background="@drawable/round_corner"/>

        <Spinner
            android:id="@+id/spinnerCategory"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="10dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:backgroundTint="@color/white"
            android:spinnerMode="dropdown"/>
        <EditText
            android:id="@+id/typeEdit"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:hint="@string/type"
            android:textSize="25sp"
            android:textColorHint="#696969"
            android:textColor="@color/white"
            android:background="@drawable/round_corner"
            android:padding="8dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_weight="1"
            android:visibility="gone"/>

    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="20dp">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/quantity"
            android:textColor="@color/white"
            android:textSize="22sp"
            android:layout_marginLeft="30dp"
            android:padding="10dp"
            android:background="@drawable/round_corner"
            android:textAlignment="center"
            android:layout_gravity="center" />
        <EditText
            android:id="@+id/weightEdit"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:hint="@string/weight"
            android:textSize="20sp"
            android:textColorHint="@color/white"
            android:textColor="@color/white"
            android:inputType="number"
            android:background="@drawable/round_corner"
            android:padding="7dp"
            android:layout_marginLeft="10dp" />

        <Spinner
            android:id="@+id/spinnerWeight"
            android:layout_width="wrap_content"
            android:layout_height="60dp"
            android:padding="10dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:backgroundTint="@color/white"
            android:spinnerMode="dropdown"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="20dp"
        android:weightSum="3">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="60dp"
            android:text="@string/address"
            android:textColor="@color/white"
            android:textSize="26sp"
            android:layout_marginLeft="30dp"
            android:layout_gravity="center"
            android:padding="10dp"
            android:textAlignment="center"
            android:layout_weight="2"
            android:background="@drawable/round_corner"/>
        <CheckBox
            android:id="@+id/editBox"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/edit"
            android:layout_gravity="center"
            android:textSize="27sp"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="20dp"
            android:textColor="@color/white"
            android:checked="false"/>

    </LinearLayout>

    <MultiAutoCompleteTextView
        android:id="@+id/editAddress"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:layout_marginBottom="16dp"
        android:text="@string/addres_demo"
        android:textSize="25sp"
        android:layout_marginLeft="30dp"
        android:layout_marginTop="20dp"
        android:textColor="@color/white"
        android:layout_marginRight="20dp"
        android:background="@drawable/round_corner"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/submit"
        android:textSize="32sp"
        android:background="@drawable/round_button"
        android:layout_marginTop="30dp"
        android:layout_marginBottom="20dp"
        android:id="@+id/submitButton"
        android:layout_gravity="center"/>



</LinearLayout>